Trying to fix development setup

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "appwrite": "^15.0.0",
-    "next": "14.2.11",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^14.2.11",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
