--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.441.0",
     "next": "^14.2.11",
+    "next-themes": "^0.3.0",
     "node-appwrite": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
