--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "next-themes": "^0.3.0",
     "node-appwrite": "^14.1.0",
     "react": "^18",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
