--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "appwrite": "^15.0.0",
     "next": "^14.2.11",
+    "node-appwrite": "^14.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
