--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@sendgrid/mail": "^8.1.3",
     "appwrite": "^15.0.0",
     "next": "^14.2.11",
     "node-appwrite": "^14.1.0",
