--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "appwrite": "^15.0.0",
     "next": "^14.2.11",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
