--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "appwrite": "^15.0.0",
+    "date-fns": "^4.1.0",
     "next": "^14.2.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
