--- a/package.json
+++ b/package.json
@@ -31,16 +31,12 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
-    "react-phone-input-2": "^2.15.1"
+    "react-phone-input-2": "^2.15.1",
     "next-themes": "^0.3.0",
-    "node-appwrite": "^14.1.0",
-    "react": "^18",
     "react-calendar": "^5.0.0",
     "react-date-picker": "^11.0.0",
     "react-datepicker": "^7.3.0",
-    "react-dom": "^18",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.53.0",
     "react-phone-number-input": "^3.4.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
