--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-google-maps/api": "^2.19.3",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@react-google-maps/api": "^2.19.3",
     "@sendgrid/mail": "^8.1.3",
     "appwrite": "^15.0.0",
     "date-fns": "^4.1.0",
     "next": "^14.2.11",
     "node-appwrite": "^14.1.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-phone-input-2": "^2.15.1"
   },
   "devDependencies": {
     "@types/node": "^20",
