--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sendgrid/mail": "^8.1.3",
     "@tanstack/react-table": "^8.20.5",
     "appwrite": "^15.0.0",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.1",
