--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "@tanstack/react-table": "^8.20.5",
     "appwrite": "^15.0.0",
     "axios": "^1.7.7",
-    "date-fns": "^4.1.0",
-    "gapi-script": "^1.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.11.1",
+    "gapi-script": "^1.2.0",
     "lucide-react": "^0.441.0",
     "next": "^14.2.14",
     "next-themes": "^0.3.0",
@@ -55,6 +55,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-transition-group": "^4.4.11",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "postcss": "^8",
