--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animations": "^2.0.0",
+    "typeface-lora": "^1.1.13",
+    "typeface-roboto": "^1.1.13",
     "zod": "^3.23.8"
   },
   "devDependencies": {
