--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "node-appwrite": "^14.1.0",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
+    "react-confetti": "^6.1.0",
     "react-date-picker": "^11.0.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
