--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cropperjs": "^1.6.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.1",
     "gapi-script": "^1.2.0",
@@ -38,6 +39,7 @@
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-confetti": "^6.1.0",
+    "react-cropper": "^2.3.3",
     "react-date-picker": "^11.0.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
