--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-google-maps/api": "^2.19.3",
     "@sendgrid/mail": "^8.1.3",
     "@tanstack/react-table": "^8.20.5",
+    "@types/react-cropper": "^1.3.7",
     "appwrite": "^16.0.2",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
