--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.1",
     "gapi-script": "^1.2.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.441.0",
     "next": "^14.2.16",
     "next-themes": "^0.3.0",
