--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-google-maps/api": "^2.19.3",
     "@sendgrid/mail": "^8.1.3",
     "@tanstack/react-table": "^8.20.5",
+    "@types/peerjs": "^0.0.30",
     "appwrite": "^16.0.2",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
@@ -34,6 +35,7 @@
     "next": "^15.0.1",
     "next-themes": "^0.3.0",
     "node-appwrite": "^14.1.0",
+    "peerjs": "^1.5.4",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-confetti": "^6.1.0",
@@ -47,6 +49,8 @@
     "react-phone-number-input": "^3.4.7",
     "react-router-dom": "^6.27.0",
     "recharts": "^2.12.7",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animations": "^2.0.0",
@@ -61,6 +65,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-transition-group": "^4.4.11",
+    "@types/simple-peer": "^9.11.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "postcss": "^8",
