--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@react-google-maps/api": "^2.19.3",
     "@sendgrid/mail": "^8.1.3",
     "@tanstack/react-table": "^8.20.5",
-    "@types/peerjs": "^0.0.30",
     "@types/react-cropper": "^1.3.7",
     "appwrite": "^16.0.2",
     "axios": "^1.7.7",
@@ -36,10 +35,9 @@
     "gapi-script": "^1.2.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.441.0",
-    "next": "^15.0.3",
+    "next": "^14.2.16",
     "next-themes": "^0.3.0",
     "node-appwrite": "^14.1.0",
-    "peerjs": "^1.5.4",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-confetti": "^6.1.0",
@@ -47,6 +45,7 @@
     "react-date-picker": "^11.0.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
@@ -55,7 +54,6 @@
     "react-router-dom": "^6.27.0",
     "recharts": "^2.12.7",
     "simple-peer": "^9.11.1",
-    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animations": "^2.0.0",
@@ -70,7 +68,6 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-transition-group": "^4.4.11",
-    "@types/simple-peer": "^9.11.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "postcss": "^8",
