--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "react-router-dom": "^6.27.0",
     "recharts": "^2.12.7",
     "simple-peer": "^9.11.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animations": "^2.0.0",
@@ -71,7 +73,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "postcss": "^8",
-    "tailwindcss": "^3.4.13",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5.6.3"
   }
 }
