--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fullhuman/postcss-purgecss": "^7.0.2",
     "@heroicons/react": "^1.0.6",
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^6.1.6",
+    "@next/bundle-analyzer": "^15.0.3",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
