--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clsx": "^2.1.1",
     "cropperjs": "^1.6.2",
     "date-fns": "^4.1.0",
+    "express": "^4.21.2",
     "framer-motion": "^11.11.1",
     "gapi-script": "^1.2.0",
     "jwt-decode": "^4.0.0",
